--- a/style/styles.css
+++ b/style/styles.css
@@ -13,7 +13,7 @@ body {
 /* _______________________________ */
 
 .header-logo {
-  font-family: "raleway" sans-serif;
+  font-family: "Raleway" sans-serif;
   font-weight: 700;
   font-size: 18px;
 
