--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,8 @@ address {
 }
 
 body {
+  font-family: "Roboto", sans-serif;
+  color: #434455;
 }
 /* _______________________________ */
 
@@ -33,7 +35,6 @@ body {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #4d5ae5;
 }
 .list-menu-item {
   font-weight: 500;
