--- a/css/styles.css
+++ b/css/styles.css
@@ -11,11 +11,12 @@ address {
 body {
   font-family: "Roboto", sans-serif;
   color: #434455;
+  background-color: #ffffff;
 }
 /* _______________________________ */
 
 .header-logo {
-  font-family: "Raleway" sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
 
@@ -27,7 +28,7 @@ body {
 }
 .header-logo-span {
   color: #2e2f42;
-  font-family: "Raleway" sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
 
