--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,9 @@ body {
 .list-menu-item:hover {
   color: #404bbf;
 }
+.list-menu-item:focus {
+  color: #404bbf;
+}
 
 .header-menu-contacts {
   font-weight: 400;
@@ -134,10 +137,54 @@ body {
   letter-spacing: 0.02em;
   color: #434455;
 }
+
+.section-team {
+  background-color: #f4f4fd;
+}
 .users-subtitle {
   text-transform: capitalize;
 }
-.users-list {
+.user-front {
+  font-weight: 500;
+  font-size: 20px;
+
+  /* line-height: 24px; */
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+}
+.user-des {
+  font-weight: 500;
+  font-size: 20px;
+
+  /* line-height: 24px; */
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+}
+.user-market {
+  font-weight: 500;
+  font-size: 20px;
+
+  /* line-height: 24px; */
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+}
+.user-ui {
+  font-weight: 500;
+  font-size: 20px;
+
+  /* line-height: 24px; */
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+}
+. .users-list {
   background-color: #ffffff;
 }
 .user-des {
